force-app/main/default/objects/Apttus_Config2__PriceListCategory__c/Apttus_Config2__PriceListCategory__c.object-meta.xml
<CustomObject>
    <description>Represents the categories associated with a price list</description>
    <label>Price List Category</label>
    <nameField>
        <displayFormat>PL-{0000000000}</displayFormat>
        <label>Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>