force-app/main/default/objects/Apttus_Config2__PriceListCategory__c/fields/Apttus_Config2__HierarchyId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HierarchyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the category  associated with the price list</description>
    <label>Hierarchy</label>
    <referenceTo>Apttus_Config2__ClassificationName__c</referenceTo>
    <relationshipLabel>Price Lists</relationshipLabel>
    <relationshipName>PriceLists</relationshipName>
    <type>Lookup</type>
</CustomField>