force-app/main/default/objects/Apttus_Config2__PriceListCategory__c/fields/Apttus_Config2__PriceListId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceListId__c</fullName>
    <description>ID of the associated price list</description>
    <label>Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>